# big_segy

./: .gitignore  README.md
generate/main/: CMakeLists.txt  build.sh  generate.cpp  run.sh
sort/main/: CMakeLists.txt  run.sh  sort.cpp
